Add email verification system using nodemailer

--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.4",
     "oauth-1.0a": "^2.2.6",
     "openai": "^4.20.0",
     "passport": "^0.6.0",
@@ -45,6 +46,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.12",
     "@types/passport-facebook": "^3.0.0",
     "@types/passport-jwt": "^3.0.9",
