--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-rate-limit": "^6.10.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.0.1",
+    "form-data": "^4.0.3",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
@@ -32,7 +33,7 @@
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4",
+    "passport-twitter": "^0.1.5",
     "redis": "^4.6.8",
     "twitter-api-v2": "^1.24.0",
     "twitter-lite": "^1.1.0"
